package edu.fiuba.algo3.modelo.Mapa;

import edu.fiuba.algo3.modelo.ConstruccionesConRadio.Pilon;
import edu.fiuba.algo3.modelo.Zerg.Zangano;

public class Mapa {
    public void agregar(Pilon pilonUno, int i, int i1) {
    }

    public void vaciar(int i, int i1) {
    }

    public boolean sePuedeConstruirProtoss(int i, int i1) {
    }

    public boolean hayMoho(int i, int i1) {
    }

    public void agregarUnidad(Zangano zangano, int i, int i1) {
    }

    public boolean estaVacia(int i, int i1) {

    }
}
