package edu.fiuba.algo3.modelo.Recursos;

public abstract class Recurso {

    protected int cantidad;

    public abstract void extraer(int cant);

}
