package edu.fiuba.algo3.modelo.Turno;

public class Turno {
    private int cantidad;
    public Turno(int cantidad) {
        this.cantidad = cantidad;
    }
    public int getCantidad (){
        return this.cantidad;
    }
}
