package edu.fiuba.algo3.modelo.Zerg;

public class Zangano {
    private int cantidad;
    public Zangano(int cantidad) {
        this.cantidad = cantidad;
    }
    public int getCantidad (){
        return this.cantidad;
    }
}
