@startuml
'https://plantuml.com/class-diagram

class Partida {}
class Turno {}
class Mapa {}
class Casilla {}
abstract class Recursos {}
class Mineral {}
class GasVespeno {}
abstract class IRefineriaGas {}

Partida "1" -down-> "*" Turno
Partida -left-> Mapa
Casilla -down-> Construccion
Casilla <- Mapa
Recursos <- Casilla
Mineral <- Recursos
Recursos -up-> GasVespeno

abstract class Zerg {}
class Larva {}
class Zangano {}
abstract class ConstruccionZerg {}
class Moho {}
class Criadero {}
class Extractor {}
class ReservaReproduccion {}
class Guarida {}
class Espiral {}

Zerg --> Larva
Zerg --> Zangano
ConstruccionZerg <|--- Criadero
ConstruccionZerg <|--- Extractor
ConstruccionZerg <|--- ReservaReproduccion
ConstruccionZerg <|--- Guarida
ConstruccionZerg <|--- Espiral

class Protoss {}
abstract class ConstruccionProtoss {
    - escudo
}
class NexoMineral {}
class Pilon {}
class Asimilador {}
class Acceso {}
class PuertoEstelar {}
abstract class Raza {}
abstract class Construccion {
    - vida : int
}

Raza <|-- Zerg
Raza <|-- Protoss

ConstruccionProtoss <|--- NexoMineral
ConstruccionProtoss <|--- Pilon
ConstruccionProtoss <|--- Asimilador
ConstruccionProtoss <|--- Acceso
ConstruccionProtoss <|--- PuertoEstelar
Raza -up-> Recursos

Construccion <|-- ConstruccionProtoss
Construccion <|-- ConstruccionZerg

ConstruccionZerg *-> Moho

@enduml